# ffmpeg-loader

./: .gitignore  CMakeLists.txt  FetchFfmpegVersions.cmake  FetchGitPartial.cmake  LICENSE  ProcessFfmpegVersions.cmake  README.md  ffmpeg-versions.txt
examples/: CMakeLists.txt
examples/generate_video/: CMakeLists.txt  README.md  generate_video__regular_ffmpeg.cc.example  generate_video_ffmpeg_loader.cc
include/avc/: ffmpeg-loader.h  i_avc_module_data_wrapper.h  i_avc_module_load_handler.h  i_avc_module_provider.h  i_avc_video_pixel_format_converter.h  libav_detached_common.h
include/media/: media_timebase.h  video_pixel_format.h
include/mproc/: i_avc_module_provider.h  video_pixel_format.h
include/tools/: dynamic_export.h  i_dynamic_modules_loader.h
include/tools/api/: dynamic_export.h
src/: CMakeLists.txt  avc_default_libraries_names.hpp  avc_dynamic_library_finder.hpp  avc_dynamic_modules_loader.cc  avc_dynamic_modules_loader.h  avc_module_data_wrapper.h  avc_module_data_wrapper.hpp  avc_module_provider.cc  avc_module_provider.h  avc_module_provider_static.cc  avc_pixel_format_converter.cc  avc_pixel_format_converter.h  dynamic_loader.hpp  ffmpeg-loader.def  i_avc_module_data_wrapper_factory.h  loader_common.h
src/static/: ffmpeg-static-loader.cc
